
* Check for missing parent inventories in StreamSink.  This prevents
  incomplete stacked branches being created by 1.13 bzr:// and
  bzr+ssh:// clients (which have bug #354036).  Instead, the server now
  causes those clients to send the missing records.  (Andrew Bennetts)

* Correctly handle http servers proposing multiple authentication schemes.
  (Vincent Ladeuil, #366107)

* End-Of-Line content filters are now loaded correctly.
  (Ian Clatworthy, Brian de Alwis, #355280)

* Fix a bug in the pure-python ``GroupCompress`` code when handling copies
  longer than 64KiB. (John Arbash Meinel, #364900)

* Fix TypeError in running ``bzr break-lock`` on some URLs.
  (Alexander Belchenko, Martin Pool, #365891)

* Non-recursive ``bzr ls`` now works properly when a path is specified.
  (Jelmer Vernooij, #357863)

* ssh usernames (defined in ~/.ssh/config) are honoured for bzr+ssh connections.
  (Vincent Ladeuil, #367726)

* Several bugs related to unicode symlinks have been fixed and the test suite
  enhanced to better catch regressions for them. (Vincent Ladeuil)

* The smart server will no longer raise 'NoSuchRevision' when streaming
  content with a size mismatch in a reconstructed graph search: it assumes
  that the client will make sure it is happy with what it got, and this
  sort of mismatch is normal for stacked environments.
  bzr 1.13.0/1 will stream from unstacked branches only - in that case not
  getting all the content expected would be a bug. However the graph
  search is how we figured out what we wanted, so a mismatch is both odd
  and unrecoverable without starting over, and starting over will end up
  with the same data as if we just permitted the mismatch. If data is
  gc'd, doing a new search will find only the truncated data, so sending
  only the truncated data seems reasonable. bzr versions newer than this
  will stream from stacked branches and check the stream to find missing
  content in the stacked-on branch, and thus will handle the situation